welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:97: error: not found: value faireGMotif
faireGMotif();
^